--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,3 +1,13 @@
+:root {
+    --white-color: #fff;
+    --black-color: #000;
+    --light-orange-color: #FFAE80;
+    --orange-white-color: #FFEFE5;
+    --Soft-Peach-color: #FFF5F0;
+    --orange-shdow-color: #FFBE99;
+
+}
+
 .hero-section {
     width: 81.82%;
     margin: 0 8.595%;
@@ -9,33 +19,16 @@
 .hero-container {
     display: flex;
     align-items: center;
-    gap: 60px;
+    gap: 40px;
 }
 
 
 .hero-image {
     width: 765px;
-    animation: heroImageZoomIn 3s ease-out forwards;
-
-}
-
-@keyframes heroImageZoomIn {
-    0% {
-        opacity: 0;
-        transform: scale(0.8) rotate(2deg);
-        filter: brightness(80%);
-    }
-
-    100% {
-        opacity: 1;
-        transform: scale(1) rotate(0deg);
-        filter: brightness(100%);
-    }
 }
 
 .hero-content {
     width: 765px;
-
 }
 
 .hero-subtitle {
