--- a/src/components/GallerySection/ImgSlider/ImgSlider.css
+++ b/src/components/GallerySection/ImgSlider/ImgSlider.css
@@ -12,7 +12,6 @@
 .image-scroll {
   display: flex;
   gap: 10px;
-  overflow: hidden;
   flex-wrap: wrap; 
   width: 100%;
   position: relative;
@@ -23,27 +22,7 @@
   flex: 1 0 calc(25% - 10px); 
   width: calc(25% - 10px); 
   border-radius: 10px;
-}
-
-@media (max-width: 1440px) {
-  .slider-img {
-    flex: 1 0 calc(25% - 10px);
-    width: calc(25% - 10px);
-  }
-}
-
-@media (max-width: 768px) {
-  .slider-img {
-    flex: 1 0 100%;
-    height: 180px;
-  }
-}
-
-.slider-text {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  object-fit: cover;
 }
 
 .slider-header {
@@ -70,9 +49,39 @@
   padding: 12px;
   border-radius: 6px;
   cursor: pointer;
-  transition: background 0.3s;
 }
 
-.slider-buttons button:hover {
-  background: #e0e0e0;
+@media (max-width: 1440px) {
+  .slider-img {
+    flex: 1 0 calc(25% - 10px);
+    width: calc(25% - 10px);
+  }
 }
+
+@media (max-width: 768px) {
+  .slider-img {
+    flex: 1 0 100%;
+    height: 180px;
+  }
+
+  .image-scroll {
+  
+    bottom: 75px;
+  }
+
+  .slider-header {
+    justify-content: center;
+
+  }
+}
+
+.slider-text {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+
+
